--- a/public/index.html
+++ b/public/index.html
@@ -6,66 +6,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p id="usuario-actual"></p>
-	<button onclick="resetUsuario()">Cambiar usuario (DEV)</button>
-
+  <div class="app">
 
     <h1>Intercambio de Clases</h1>
+    <p id="usuario-actual"></p>
 
-    <!-- Listado de solicitudes -->
-    <section id="lista-solicitudes">
-        <!-- Aquí se insertarán las solicitudes con JS -->
-    </section>
+    <!-- ALERTA INFORMATIVA -->
+    <div id="alerta-info" class="alerta info oculto"></div>
 
-    <!-- Botón para mostrar el formulario -->
-    <button id="btn-formulario">+ Solicitar intercambio</button>
+    <!-- ALERTA ERROR -->
+    <div id="alerta-error" class="alerta error oculto"></div>
 
-    <!-- Formulario -->
-    <section id="formulario-container" class="oculto">
-        <div id="info-intercambio" class="alerta alerta-info oculto">
+    <!-- LISTA SCROLLEABLE -->
+    <div id="lista-solicitudes" class="lista"></div>
 
-    <!-- 🔴 Alerta de error -->
-    <div id="error-intercambio" class="alerta alerta-error oculto"></div>
+    <!-- BOTÓN PRINCIPAL -->
+    <button id="btn-formulario" class="btn-principal">
+      Solicitar intercambio
+    </button>
 
-    <!-- 🟡 Alerta informativa -->
-    <div class="alerta alerta-info-texto">
-        ⚠️ <strong>Atención:</strong><br>
-        Ingresa aquí la <strong>clase a la que tú NO podrás asistir</strong>
-        (grupo y fecha).<br>
-        Esta clase será intercambiada por la del otro estudiante.
-    </div>
+  </div>
 
-</div>
-<div id="selector-clase-propia" class="oculto">
-    <label for="clases-propias">
-        Selecciona una de tus clases ya registradas:
-    </label>
-    <select id="clases-propias">
-        <option value="">-- Usar otra clase --</option>
-    </select>
-</div>
-        <form id="formulario">
-        	<button type="button" id="cerrar-formulario">✕</button>
-            <h2>Nueva solicitud</h2>
-            <label>
-                Asignatura
-                <input type="text" id="asignatura" required>
-            </label>
+  <!-- FORMULARIO DESLIZABLE -->
+  <div id="formulario-container" class="formulario-container oculto">
+    <button id="cerrar-formulario" class="cerrar">✕</button>
 
-            <label>
-                Grupo
-                <input type="number" id="grupo" required>
-            </label>
+    <!-- INFO INTERCAMBIO -->
+    <div id="info-intercambio" class="alerta info oculto"></div>
 
-            <label>
-                Fecha a la que no puede asistir
-                <input type="date" id="fecha" required>
-            </label>
+    <form id="formulario">
+      <!-- tus inputs existentes -->
+    </form>
 
-            <button type="submit">Agregar</button>
-        </form>
-    </section>
-
-    <script src="functions.js"></script>
+    <!-- ERROR FORMULARIO -->
+    <div id="error-intercambio" class="alerta error oculto"></div>
+  </div>
 </body>
 </html>
