--- a/public/index.html
+++ b/public/index.html
@@ -6,28 +6,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p id="usuario-actual"></p>
-	<button onclick="resetUsuario()">Cambiar usuario (DEV)</button>
 
+<div class="app">
 
-    <h1>Intercambio de Clases</h1>
+    <!-- HEADER -->
+    <header class="header">
+        <h1>Intercambio de Clases</h1>
+        <p id="usuario-actual"></p>
+        <button onclick="resetUsuario()" class="btn-dev">
+            Cambiar usuario (DEV)
+        </button>
+    </header>
 
-    <!-- Listado de solicitudes -->
-    <section id="lista-solicitudes">
-        <!-- Aquí se insertarán las solicitudes con JS -->
-    </section>
+    <!-- ALERTA GLOBAL INFORMATIVA -->
+    <div id="alerta-info" class="alerta alerta-info oculto"></div>
 
-    <!-- Botón para mostrar el formulario -->
-    <button id="btn-formulario">+ Solicitar intercambio</button>
+    <!-- ALERTA GLOBAL ERROR -->
+    <div id="alerta-error" class="alerta alerta-error oculto"></div>
 
-    <!-- Formulario -->
-    <section id="formulario-container" class="oculto">
-        <div id="info-intercambio" class="alerta alerta-info oculto">
+    <!-- LISTA DE SOLICITUDES (SCROLL) -->
+    <main id="lista-solicitudes" class="lista-solicitudes">
+        <!-- JS inserta aquí las solicitudes -->
+    </main>
 
-    <!-- 🔴 Alerta de error -->
+    <!-- BOTÓN PRINCIPAL -->
+    <button id="btn-formulario" class="btn-principal">
+        + Solicitar intercambio
+    </button>
+
+</div>
+
+<!-- FORMULARIO DESLIZABLE -->
+<section id="formulario-container" class="formulario-container oculto">
+
+    <!-- BOTÓN CERRAR -->
+    <button type="button" id="cerrar-formulario" class="cerrar-formulario">
+        ✕
+    </button>
+
+    <!-- INFO INTERCAMBIO (cuando aceptas uno) -->
+    <div id="info-intercambio" class="alerta alerta-info oculto"></div>
+
+    <!-- ALERTA DE ERROR DEL FORM -->
     <div id="error-intercambio" class="alerta alerta-error oculto"></div>
 
-    <!-- 🟡 Alerta informativa -->
+    <!-- ALERTA INFORMATIVA FIJA -->
     <div class="alerta alerta-info-texto">
         ⚠️ <strong>Atención:</strong><br>
         Ingresa aquí la <strong>clase a la que tú NO podrás asistir</strong>
@@ -35,37 +58,42 @@
         Esta clase será intercambiada por la del otro estudiante.
     </div>
 
-</div>
-<div id="selector-clase-propia" class="oculto">
-    <label for="clases-propias">
-        Selecciona una de tus clases ya registradas:
-    </label>
-    <select id="clases-propias">
-        <option value="">-- Usar otra clase --</option>
-    </select>
-</div>
-        <form id="formulario">
-        	<button type="button" id="cerrar-formulario">✕</button>
-            <h2>Nueva solicitud</h2>
-            <label>
-                Asignatura
-                <input type="text" id="asignatura" required>
-            </label>
+    <!-- SELECTOR DE CLASES PROPIAS -->
+    <div id="selector-clase-propia" class="selector-clase-propia oculto">
+        <label for="clases-propias">
+            Selecciona una de tus clases ya registradas:
+        </label>
+        <select id="clases-propias">
+            <option value="">-- Usar otra clase --</option>
+        </select>
+    </div>
 
-            <label>
-                Grupo
-                <input type="number" id="grupo" required>
-            </label>
+    <!-- FORMULARIO -->
+    <form id="formulario" class="formulario">
+        <h2>Nueva solicitud</h2>
 
-            <label>
-                Fecha a la que no puede asistir
-                <input type="date" id="fecha" required>
-            </label>
+        <label>
+            Asignatura
+            <input type="text" id="asignatura" required>
+        </label>
 
-            <button type="submit">Agregar</button>
-        </form>
-    </section>
+        <label>
+            Grupo
+            <input type="number" id="grupo" required>
+        </label>
 
-    <script src="functions.js"></script>
+        <label>
+            Fecha a la que no puede asistir
+            <input type="date" id="fecha" required>
+        </label>
+
+        <button type="submit" class="btn-submit">
+            Guardar
+        </button>
+    </form>
+
+</section>
+
+<script src="functions.js"></script>
 </body>
 </html>
