Update cambiar de nombre

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,12 @@
     <!-- HEADER -->
     <header class="header">
         <h1>Intercambio de Clases</h1>
-        <p id="usuario-actual"></p>
+        <div class="usuario-container">
+    <span id="usuario-actual"></span>
+    <button id="btn-editar-nombre" class="btn-editar" title="Cambiar nombre">
+        ✏️
+    </button>
+</div>
     </header>
 
     <!-- LISTA DE SOLICITUDES (SCROLL) -->
