--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
         <div class="usuario-container">
     <span id="usuario-actual"></span>
     <button id="btn-editar-nombre" class="btn-editar" title="Cambiar nombre">
-        ✏️
+        <span class="icono">✏️</span>
+        <span class="texto">Cambiar nombre</span>
     </button>
 </div>
     </header>
